# not-x-but-y-bench

./: .gitignore  README.md  create_results_chart.py  filter_results.py  human_baseline.py  main.py  not-x-but-y-calc-human-baseline.py  prompts.json  pyproject.toml  recalc.py
results/: Mistral-Small-3.2-24B-Instruct-2506.json  chatgpt-4o-latest.json  claude-sonnet-4-20250514.json  claude-sonnet-4-5.json  deepseek-r1.json  deepseek-v3.2-exp.json  gemini-2.5-flash.json  gemma-3-12b-it.json  gemma-3-27b-it-antislop.json  gemma-3-27b-it.json  gemma-3-4b-it.json  glm-4.5.json  gpt-5-mini-2025-08-07.json  gpt-5-nano-2025-08-07.json  kimi-k2-0905.json  kimi-k2.json  ling-1t.json  llama-4-maverick.json  mistral-nemo.json  o3.json  polaris-alpha.json  qwen3-4b.json
src/: api.py  config.py  io_utils.py  pos_tagger.py  regexes_pos.py  regexes_v3.py  scorer.py
